--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <h1>Valter de Matos</h1>
     <p></p>
     <p class="view">pushing pixels since '97</p>
+    <h2>Sobre</h2>
+    <p>Sítio de apoio à docência. <br />
+      Nota: os programas aqui listados são sempre indicativos e posteriormente adequados nas respectivas coordenações às contingências reais do ano/curso. Os alunos devem sempre entender como programa final o afixado no Moodle.</p>
   </header>
   <section>
     <div class="pagehead">
@@ -31,8 +34,7 @@
       <li><a href="#dpm2013">DPM <span class="counter">!</span></a></li>
       <li><a href="#arquivo" class="a selected">Arquivo</a></li>
     </ul>
-    <h2><a name="tab2013" class="anchor" href="#tab2013"><span class="octicon octicon-link"></span></a>
-    Tecnologias de Animação Bidimensional</h2>
+    <h2><a name="tab2013" class="anchor" href="#tab2013"><span class="octicon octicon-link"></span></a> Tecnologias de Animação Bidimensional</h2>
     <div class="boxed-group">
       <div class="boxed-group-inner seamless">
         <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
@@ -158,8 +160,7 @@
           </tr>
           <tr>
             <th scope="row">Tópicos</th>
-            <td>
-              <ul>
+            <td><ul>
                 <li> Compreensão das potencialidades do Flash para produção de jogos; </li>
                 <li> Familiaridade com o interface do Flash e domínio das suas ferramentas; </li>
                 <li> Execução de projectos gráficos e produção de materiais visuais combinados (vectores, bitmaps, texto, vídeo, áudio); </li>
@@ -171,15 +172,15 @@
           <tr>
             <th scope="row">Bibliografia</th>
             <td><ul>
-              <li>Apoios e referências diversas fornecidos em aula.</li>
-              <li>Griffith, Christopher. Real-world Flash Game Development: How to Follow Best Practices and Keep Your</li>
-              <li>Sanity. Burlington, MA: Elsevier Focal, 2010</li>
-              <li>Perkins, Todd. Flash Professional CS5 Bible. Hoboken, NJ: Wiley Pub., 2010</li>
-              <li>Makar, Jobe. Macromedia Flash MX Game Design Demystified: The Official Guide. Berkeley, CA: Peachpit, 2002</li>
-              <li>Adobe.com. 2013. Game development | Adobe Developer Connection. [online] Disponível em: http://www.adobe.com/devnet/games.html [acesso: 20 Setembro 2013].</li>
-              <li>Gaming.adobe.com. 2013. Adobe Gaming - Better games. More easily. For more people.. [online] Disponível em: http://gaming.adobe.com/ [acesso: 20 Setembro 2013].</li>
-              <li>Tonypa.pri.ee. 2013. Tile based games. [online] Disponível em: http://www.tonypa.pri.ee/tbw/ start.html [acesso: 20 Setembro 2013]</li>
-            </ul>            </td>
+                <li>Apoios e referências diversas fornecidos em aula.</li>
+                <li>Griffith, Christopher. Real-world Flash Game Development: How to Follow Best Practices and Keep Your</li>
+                <li>Sanity. Burlington, MA: Elsevier Focal, 2010</li>
+                <li>Perkins, Todd. Flash Professional CS5 Bible. Hoboken, NJ: Wiley Pub., 2010</li>
+                <li>Makar, Jobe. Macromedia Flash MX Game Design Demystified: The Official Guide. Berkeley, CA: Peachpit, 2002</li>
+                <li>Adobe.com. 2013. Game development | Adobe Developer Connection. [online] Disponível em: http://www.adobe.com/devnet/games.html [acesso: 20 Setembro 2013].</li>
+                <li>Gaming.adobe.com. 2013. Adobe Gaming - Better games. More easily. For more people.. [online] Disponível em: http://gaming.adobe.com/ [acesso: 20 Setembro 2013].</li>
+                <li>Tonypa.pri.ee. 2013. Tile based games. [online] Disponível em: http://www.tonypa.pri.ee/tbw/ start.html [acesso: 20 Setembro 2013]</li>
+              </ul></td>
           </tr>
         </table>
       </div>
@@ -243,9 +244,32 @@
       2001-2002<br />
       2000-2001<br />
       1999-2000</h3>
+      <hr />
+<h2> <a name="referencias" class="anchor" href="#referencias"><span class="octicon octicon-link"></span></a>Algumas referências</h2>
+    <h4>HCI e Usabilidade</h4>
+    <ul>
+      <li>Nielsen, Jakob. Usability Engineering. Boston: Academic, 1993. Print.</li>
+      <li>Norman, Donald A. The Design of Everyday Things. London: MIT, 1998. Print.</li>
+      <li>Shneiderman, Ben. Designing the User Interface: Strategies for Effective Human-computer-interaction. Reading, Mass: Addison Wesley Longman, 1998. Print.</li>
+      <li>Mullet, Kevin, and Darrell Sano. Designing Visual Interfaces: Communication Oriented Techniques. Englewood Cliffs, NJ: SunSoft, 1995. Print.</li>
+      <li>Dix, Alan. Human-computer Interaction. London: Prentice Hall Europe, 1998. Print.</li>
+    </ul>
+    <h4>Usabilidade Web (pré-mobile)</h4>
+    <ul>
+      <li>Badre, Albert. Shaping Web Usability: Interaction Design in Context. Boston: Addison-Wesley, 2002. Print.</li>
+      <li>Brinck, Tom, Darren Gergle, and Scott D. Wood. Designing Web Sites That Work: Usability for the Web. San Francisco: Morgan Kaufmann, 2002. Print.</li>
+      <li>Wroblewski, Luke. Site-seeing: A Visual Approach to Web Usability. New York, NY: Hungry Minds, 2002. Print.</li>
+      <li>Krug, Steve. Don't Make Me Think!: A Common Sense Approach to Web Usability. Berkeley, Calif: New Riders Pub., 2006. Print.</li>
+    </ul>
+    <h4>Usabilidade Web (pós-mobile)</h4>
+    <p>A academia ainda está a tentar apanhar a industria. Ler, entre outros:</p>
+    <ul>
+      <li>Jeremy Keith, Jason Grigsby, Josh Clark, Luke Wroblewski, Ethan Marcotte, Brian e Stephanie Rieger, Scott Jenson, Tim Kadlec, Lyza D. Gardner, etc...</li>
+    </ul>
+    <p>Mantenho um sítio de referência ao pós-mobile em <a href="http://logmob.wordpress.com/" target="_blank">logmob.wordpress.com</a></p>
   </section>
   <footer>
-    <p><small>Hosted on GitHub Pages | (original) theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    <p><small>Hosted on GitHub Pages | (original) theme by <a href="https://github.com/orderedlist">orderedlist</a></small><br /><small>...porquê o github? Nenhum motivo particular :)</small></p>
   </footer>
 </div>
 <script src="javascripts/scale.fix.js"></script> 
