--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
   <header>
     <h1>Valter de Matos</h1>
     <p></p>
-    <p class="view">pushing pixels since '97</p>
-    <h2>Sobre</h2>
-    <p>Sítio de apoio à docência. <br />
-      Nota: os programas aqui listados são sempre indicativos e posteriormente adequados nas respectivas coordenações às contingências reais do ano/curso. Os alunos devem sempre entender como programa final o afixado no Moodle.</p>
+    <p class="view">pushing pixels since '97    </p>
+    <p><strong>Sítio de arquivo à docência</strong>. <br />
+      Nota: os programas aqui listados são apenas indicativos e posteriormente adequados nas respectivas coordenações às contingências do ano/curso. Os alunos devem sempre entender como programa final o afixado no Moodle.</p>
   </header>
   <section>
     <div class="pagehead">
@@ -34,6 +33,41 @@
       <li><a href="#dpm2013">DPM <span class="counter">!</span></a></li>
       <li><a href="#arquivo" class="a selected">Arquivo</a></li>
     </ul>
+    
+    <h1> <a name="referencias" class="anchor" href="#referencias"><span class="octicon octicon-link"></span></a>Referências    </h1>
+    <h4> Frontend design/dev* web (pós-mobile)    </h4>
+    <p>Mantenho um sítio de referência em <a class="button" href="http://logmob.wordpress.com/" target="_blank">logmob.wordpress.com</a> Ler, entre outros:</p>
+    <ul>
+      <li>Jeremy Keith, Jason Grigsby, Josh Clark, Luke Wroblewski, Ethan Marcotte, Brian e Stephanie Rieger, Scott Jenson, Tim Kadlec, Lyza D. Gardner, etc... </li>
+    </ul>
+    <p><small>* à falta de uma definição mais rigososa, <a href="http://www.theguardian.com/help/insideguardian/2009/sep/28/blogpost" target="_blank">ver  Guardian</a>.</small></p>
+    <h4> Webdesign (pré-mobile)</h4>
+    <ul>
+      <li>Badre, Albert. Shaping Web Usability: Interaction Design in Context. Boston: Addison-Wesley, 2002. Print.</li>
+      <li>Brinck, Tom, Darren Gergle, and Scott D. Wood. Designing Web Sites That Work: Usability for the Web. San Francisco: Morgan Kaufmann, 2002. Print.</li>
+      <li>Wroblewski, Luke. Site-seeing: A Visual Approach to Web Usability. New York, NY: Hungry Minds, 2002. Print.</li>
+      <li>Krug, Steve. Don't Make Me Think!: A Common Sense Approach to Web Usability. Berkeley, Calif: New Riders Pub., 2006. Print.</li>
+    </ul>
+    <h4>Usabilidade (pré-mobile)</h4>
+    <ul>
+      <li>Nielsen, Jakob. Usability Engineering. Boston: Academic, 1993. Print.</li>
+      <li>Norman, Donald A. The Design of Everyday Things. London: MIT, 1998. Print.</li>
+      <li>Shneiderman, Ben. Designing the User Interface: Strategies for Effective Human-computer-interaction. Reading, Mass: Addison Wesley Longman, 1998. Print.</li>
+      <li>Mullet, Kevin, and Darrell Sano. Designing Visual Interfaces: Communication Oriented Techniques. Englewood Cliffs, NJ: SunSoft, 1995. Print.</li>
+      <li>Dix, Alan. Human-computer Interaction. London: Prentice Hall Europe, 1998. Print. </li>
+    </ul>
+    <h4>Animação (Flash)</h4>
+    <ul>
+      <li><a href="http://www.coldhardflash.com" target="_blank">Cold Hard Flash</a>:   actualizado constantemente,  as mais recentes animações Flash e derivadas (cinema, televisão e web);</li>
+    </ul>
+    <h4>Jogos (Flash)</h4>
+    <ul>
+      <li><a href="http://www.adobe.com/devnet/games.html" target="_blank">Adobe Game Development</a></li>
+      <li><a href="http://gaming.adobe.com/" target="_blank">Adobe Gaming</a>    </li>
+    </ul>
+    <hr />
+    
+    <h1 style="margin-bottom:-30px;"> Programas </h1>
     <h2><a name="tab2013" class="anchor" href="#tab2013"><span class="octicon octicon-link"></span></a> Tecnologias de Animação Bidimensional</h2>
     <div class="boxed-group">
       <div class="boxed-group-inner seamless">
@@ -52,7 +86,7 @@
                 </li>
                 <li>Gestão de cores. <br />
                 </li>
-                <li>Importação de objectos externos (vector, bitmap, áudio e vídeo). <br />
+                <li>Importação de objectos  (vector, bitmap, áudio e vídeo). <br />
                 </li>
                 <li>Manutenção da Biblioteca. <br />
                 </li>
@@ -185,42 +219,43 @@
         </table>
       </div>
     </div>
-    <h2> <a name="arquivo" class="anchor" href="#arquivo"><span class="octicon octicon-link"></span></a> Arquivo: (anos lectivos em netPA)</h2>
-    <h3> <a name="2012" class="anchor" href="#2012"><span class="octicon octicon-link"></span></a>2012/2013</h3>
+    <h1> <a name="arquivo" class="anchor" href="#arquivo"><span class="octicon octicon-link"></span></a> Arquivo</h1>
+    <h2>Anos lectivos em netPA</h2>
+    <h3> 2012/2013</h3>
     <p>1º Semestre 2586 Design de Produtos Multimédia<br />
       2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br />
       2º Semestre 7031 Computação de Imagem Digital<br />
       1º Semestre 9453 Tecnologias de Animação Bidimensional<br />
       2º Semestre 11048 Atelier de Artes Digitais II</p>
-    <h3> <a name="2011" class="anchor" href="#2011"><span class="octicon octicon-link"></span></a>2011/2012</h3>
+    <h3> 2011/2012</h3>
     <p>1º Semestre 2279 Introdução à Computação<br />
       2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br />
       2º Semestre 5769 Atelier de Design de Sistemas Multimédia I<br />
       2º Semestre 7031 Computação de Imagem Digital<br />
       1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
-    <h3> <a name="2010" class="anchor" href="#2010"><span class="octicon octicon-link"></span></a>2010/2011 <img src="http://s0.wp.com/wp-includes/images/smilies/icon_smile.gif?m=1129645325g" alt=":)" class="wp-smiley" scale="0" /></h3>
+    <h3> 2010/2011 <img src="http://s0.wp.com/wp-includes/images/smilies/icon_smile.gif?m=1129645325g" alt=":)" class="wp-smiley" scale="0" /></h3>
     <p>1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
-    <h3> <a name="2009" class="anchor" href="#2009"><span class="octicon octicon-link"></span></a>2009/2010</h3>
+    <h3> 2009/2010</h3>
     <p>1º Semestre 2279 Introdução à Computação<br />
       1º Semestre 2586 Design de Produtos Multimédia<br />
       1º Semestre 2590 Computação Multimédia e Interactividade<br />
       2º Semestre 7282 Desenho e Animação 2D e 3D<br />
       1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
-    <h3> <a name="2008" class="anchor" href="#2008"><span class="octicon octicon-link"></span></a>2008/2009</h3>
+    <h3> 2008/2009</h3>
     <p>1º Semestre 2279 Introdução à Computação<br />
       1º Semestre 2586 Design de Produtos Multimédia<br />
       1º Semestre 2590 Computação Multimédia e Interactividade<br />
       1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br />
       2º Semestre 7282 Desenho e Animação 2D e 3D<br />
       2º Semestre 7290 Computação Multimédia e Interactividades</p>
-    <h3> <a name="2007" class="anchor" href="#2007"><span class="octicon octicon-link"></span></a>2007/2008</h3>
+    <h3> 2007/2008</h3>
     <p>1º Semestre 2279 Introdução à Computação<br />
       1º Semestre 2586 Design de Produtos Multimédia<br />
       1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br />
       1º Semestre 7031 Computação de Imagem Digital<br />
       1º Semestre 7281 Sistemas de Informação Multimédia<br />
       2º Semestre 7282 Desenho e Animação 2D e 3D</p>
-    <h3> <a name="2006" class="anchor" href="#2006"><span class="octicon octicon-link"></span></a>2006/2007</h3>
+    <h3> 2006/2007</h3>
     <p>1º Semestre 2279 Introdução à Computação<br />
       1º Semestre 2586 Design de Produtos Multimédia<br />
       1º Semestre 2590 Computação Multimédia e Interactividade<br />
@@ -229,7 +264,7 @@
       1º Semestre 7281 Sistemas de Informação Multimédia<br />
       2º Semestre 7282 Desenho e Animação 2D e 3D<br />
       1º Semestre 7291 Atelier de Publicidade e Marketing</p>
-    <h3> <a name="2005" class="anchor" href="#2005"><span class="octicon octicon-link"></span></a>2005/2006</h3>
+    <h3> 2005/2006</h3>
     <p>1º Semestre 2279 Introdução à Computação<br />
       1º Semestre 2375 Computação Escrita e Gráfica<br />
       2º Semestre 2377 Computação da Imagem e Som Digitais<br />
@@ -237,39 +272,19 @@
       1º Semestre 2590 Computação Multimédia e Interactividade<br />
       1º Semestre 5707 Atelier de Design Multimédia<br />
       2º Semestre 5707 Atelier de Design Multimédia</p>
-    <h2> <a name="2004" class="anchor" href="#2004"><span class="octicon octicon-link"></span></a>(Anos lectivos anteriores ao netPA)</h2>
+    <h2> Anos lectivos anteriores ao netPA</h2>
     <h3>2004-2005<br />
       2003-2004<br />
       2002-2003<br />
       2001-2002<br />
       2000-2001<br />
       1999-2000</h3>
-      <hr />
-<h2> <a name="referencias" class="anchor" href="#referencias"><span class="octicon octicon-link"></span></a>Algumas referências</h2>
-    <h4>HCI e Usabilidade</h4>
-    <ul>
-      <li>Nielsen, Jakob. Usability Engineering. Boston: Academic, 1993. Print.</li>
-      <li>Norman, Donald A. The Design of Everyday Things. London: MIT, 1998. Print.</li>
-      <li>Shneiderman, Ben. Designing the User Interface: Strategies for Effective Human-computer-interaction. Reading, Mass: Addison Wesley Longman, 1998. Print.</li>
-      <li>Mullet, Kevin, and Darrell Sano. Designing Visual Interfaces: Communication Oriented Techniques. Englewood Cliffs, NJ: SunSoft, 1995. Print.</li>
-      <li>Dix, Alan. Human-computer Interaction. London: Prentice Hall Europe, 1998. Print.</li>
-    </ul>
-    <h4>Usabilidade Web (pré-mobile)</h4>
-    <ul>
-      <li>Badre, Albert. Shaping Web Usability: Interaction Design in Context. Boston: Addison-Wesley, 2002. Print.</li>
-      <li>Brinck, Tom, Darren Gergle, and Scott D. Wood. Designing Web Sites That Work: Usability for the Web. San Francisco: Morgan Kaufmann, 2002. Print.</li>
-      <li>Wroblewski, Luke. Site-seeing: A Visual Approach to Web Usability. New York, NY: Hungry Minds, 2002. Print.</li>
-      <li>Krug, Steve. Don't Make Me Think!: A Common Sense Approach to Web Usability. Berkeley, Calif: New Riders Pub., 2006. Print.</li>
-    </ul>
-    <h4>Usabilidade Web (pós-mobile)</h4>
-    <p>A academia ainda está a tentar apanhar a industria. Ler, entre outros:</p>
-    <ul>
-      <li>Jeremy Keith, Jason Grigsby, Josh Clark, Luke Wroblewski, Ethan Marcotte, Brian e Stephanie Rieger, Scott Jenson, Tim Kadlec, Lyza D. Gardner, etc...</li>
-    </ul>
-    <p>Mantenho um sítio de referência ao pós-mobile em <a href="http://logmob.wordpress.com/" target="_blank">logmob.wordpress.com</a></p>
+
+   
   </section>
   <footer>
-    <p><small>Hosted on GitHub Pages | (original) theme by <a href="https://github.com/orderedlist">orderedlist</a></small><br /><small>...porquê o github? Nenhum motivo particular :)</small></p>
+    <p><small>Hosted on GitHub Pages | (original) theme by <a href="https://github.com/orderedlist">orderedlist</a></small><br />
+      <small>Porquê o github? Nenhum motivo particular :)</small></p>
   </footer>
 </div>
 <script src="javascripts/scale.fix.js"></script> 
