--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
 <body>
 <div class="wrapper">
   <header>
-    <h1>Valter de Matos</h1>
-    <p></p>
-    <p class="view">pushing pixels since '97    </p>
+    <h1 style="margin-bottom:0;">Valter de Matos</h1>
+    <p class="view">pushing pixels since '97 </p>
     <p><strong>Sítio de arquivo à docência</strong>. <br />
-      Nota: os programas aqui listados são apenas indicativos e posteriormente adequados nas respectivas coordenações às contingências do ano/curso. Os alunos devem sempre entender como programa final o afixado no Moodle.</p>
+      Os programas aqui listados são meramente indicativos, sendo posteriormente adequados nas respectivas coordenações às contingências do ano/curso. Os alunos devem sempre entender como programa final o afixado no Moodle.</p>
   </header>
   <section>
     <div class="pagehead">
       <div class="container">
-        <h1>2013/2014</h1>
+        <h1 style="text-align:right;">2013/2014 <span style="display:block;text-transform:uppercase;font-size:50%;color:#999;">1º semestre</span></h1>
       </div>
     </div>
     <ul class="dashboard-tabs">
@@ -33,9 +32,8 @@
       <li><a href="#dpm2013">DPM <span class="counter">!</span></a></li>
       <li><a href="#arquivo" class="a selected">Arquivo</a></li>
     </ul>
-    
-    <h1> <a name="referencias" class="anchor" href="#referencias"><span class="octicon octicon-link"></span></a>Referências    </h1>
-    <h4> Frontend design/dev* web (pós-mobile)    </h4>
+    <h1> <a name="referencias" class="anchor" href="#referencias"><span class="octicon octicon-link"></span></a>Referências </h1>
+    <h4> Frontend design/dev* web (pós-mobile) </h4>
     <p>Mantenho um sítio de referência em <a class="button" href="http://logmob.wordpress.com/" target="_blank">logmob.wordpress.com</a> Ler, entre outros:</p>
     <ul>
       <li>Jeremy Keith, Jason Grigsby, Josh Clark, Luke Wroblewski, Ethan Marcotte, Brian e Stephanie Rieger, Scott Jenson, Tim Kadlec, Lyza D. Gardner, etc... </li>
@@ -63,10 +61,9 @@
     <h4>Jogos (Flash)</h4>
     <ul>
       <li><a href="http://www.adobe.com/devnet/games.html" target="_blank">Adobe Game Development</a></li>
-      <li><a href="http://gaming.adobe.com/" target="_blank">Adobe Gaming</a>    </li>
+      <li><a href="http://gaming.adobe.com/" target="_blank">Adobe Gaming</a> </li>
     </ul>
     <hr />
-    
     <h1 style="margin-bottom:-30px;"> Programas </h1>
     <h2><a name="tab2013" class="anchor" href="#tab2013"><span class="octicon octicon-link"></span></a> Tecnologias de Animação Bidimensional</h2>
     <div class="boxed-group">
@@ -279,12 +276,10 @@
       2001-2002<br />
       2000-2001<br />
       1999-2000</h3>
-
-   
   </section>
   <footer>
     <p><small>Hosted on GitHub Pages | (original) theme by <a href="https://github.com/orderedlist">orderedlist</a></small><br />
-      <small>Porquê o github? Nenhum motivo particular :)</small></p>
+      <small>Porquê o github? Para explorar. Remain restless!</small></p>
   </footer>
 </div>
 <script src="javascripts/scale.fix.js"></script> 
