--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <li><a href="#dpm2013">DPM <span class="counter">!</span></a></li>
       <li><a href="#arquivo" class="a selected">Arquivo</a></li>
     </ul>
-    <h1> <a name="referencias" class="anchor" href="#referencias"><span class="octicon octicon-link"></span></a>Referências </h1>
+    <h1 style="margin-top:75px;"> <a name="referencias" class="anchor" href="#referencias"><span class="octicon octicon-link"></span></a>Referências </h1>
     <h4> Frontend design/dev* web (pós-mobile) </h4>
     <p>Mantenho um sítio de referência em <a class="button" href="http://logmob.wordpress.com/" target="_blank">logmob.wordpress.com</a> Ler, entre outros:</p>
     <ul>
