--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </ul>
     <h4>Animação (Flash)</h4>
     <ul>
-      <li><a href="http://www.coldhardflash.com" target="_blank">Cold Hard Flash</a>:   actualizado constantemente,  as mais recentes animações Flash e derivadas (cinema, televisão e web);</li>
+      <li><a href="http://www.coldhardflash.com" target="_blank">Cold Hard Flash</a>:   actualizado constantemente,  as mais recentes animações Flash e derivadas (cinema, televisão, web e jogos);</li>
     </ul>
     <h4>Jogos (Flash)</h4>
     <ul>
