--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       <li><a href="#arquivo" class="a selected">Arquivo</a></li>
     </ul>
     <h1 style="margin-top:75px;"> <a name="referencias" class="anchor" href="#referencias"><span class="octicon octicon-link"></span></a>Referências </h1>
-    <h4> Frontend design/dev* web (pós-mobile) </h4>
-    <p>Mantenho um sítio de referência em <a class="button" href="http://logmob.wordpress.com/" target="_blank">logmob.wordpress.com</a> Ler, entre outros:</p>
-    <ul>
-      <li>Jeremy Keith, Jason Grigsby, Josh Clark, Luke Wroblewski, Ethan Marcotte, Brian e Stephanie Rieger, Scott Jenson, Tim Kadlec, Lyza D. Gardner, etc... </li>
-    </ul>
-    <p><small>* à falta de uma definição mais rigososa, <a href="http://www.theguardian.com/help/insideguardian/2009/sep/28/blogpost" target="_blank">ver  Guardian</a>.</small></p>
+    <h4> Frontend design/dev* web (pós-mobile) 
+    <small style="font-weight:normal;">* à falta de uma definição mais rigososa, <a href="http://www.theguardian.com/help/insideguardian/2009/sep/28/blogpost" target="_blank">ver  Guardian</a>.</small>
+    </h4>
+        <p>Jeremy Keith, Jason Grigsby, Josh Clark, Luke Wroblewski, Ethan Marcotte, Brian e Stephanie Rieger, Scott Jenson, Tim Kadlec, Lyza D. Gardner, etc...</p>
+    <p>Mantenho um sítio de referência em <a class="button" href="http://logmob.wordpress.com/" target="_blank">logmob.wordpress.com</a> </p>
+    
     <h4> Webdesign (pré-mobile)</h4>
     <ul>
       <li>Badre, Albert. Shaping Web Usability: Interaction Design in Context. Boston: Addison-Wesley, 2002. Print.</li>
