--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
     <h4> Frontend design/dev* web (pós-mobile) 
     <small style="font-weight:normal;">* à falta de uma definição mais rigososa, <a href="http://www.theguardian.com/help/insideguardian/2009/sep/28/blogpost" target="_blank">ver  Guardian</a>.</small>
     </h4>
-        <p>Jeremy Keith, Jason Grigsby, Josh Clark, Luke Wroblewski, Ethan Marcotte, Brian e Stephanie Rieger, Scott Jenson, Tim Kadlec, Lyza D. Gardner, etc...</p>
+    <p>Jeremy Keith, Jason Grigsby, Josh Clark, Luke Wroblewski, Ethan Marcotte, Brian e Stephanie Rieger, Scott Jenson, Tim Kadlec, Lyza D. Gardner, etc...</p>
     <p>Mantenho um sítio de referência em <a class="button" href="http://logmob.wordpress.com/" target="_blank">logmob.wordpress.com</a> </p>
-    
     <h4> Webdesign (pré-mobile)</h4>
     <ul>
       <li>Badre, Albert. Shaping Web Usability: Interaction Design in Context. Boston: Addison-Wesley, 2002. Print.</li>
@@ -56,7 +55,8 @@
     </ul>
     <h4>Animação (Flash)</h4>
     <ul>
-      <li><a href="http://www.coldhardflash.com" target="_blank">Cold Hard Flash</a>:   actualizado constantemente,  as mais recentes animações Flash e derivadas (cinema, televisão, web e jogos);</li>
+      <li><a href="http://www.coldhardflash.com" target="_blank">Cold Hard Flash</a>: actualizado constantemente,  as mais recentes animações Flash e derivadas (cinema, televisão, web e jogos);</li>
+       <li><a href="http://flash-powertools.com/" target="_blank">Electric Dog Animation Power Tools</a>: plugins de suporte à animação em Flash;</li>
     </ul>
     <h4>Jogos (Flash)</h4>
     <ul>
@@ -125,6 +125,7 @@
               </ul></td>
           </tr>
         </table>
+        <p>Animações visionadas aqui <a class="button" href="http://www.youtube.com/user/valterdematos/" target="_blank">youtube.com/user/valterdematos</a> </p>
       </div>
     </div>
     <h2> <a name="cmi2013" class="anchor" href="#cmi2013"><span class="octicon octicon-link"></span></a> Computação Multimédia e Interactividade</h2>
@@ -278,8 +279,7 @@
       1999-2000</h3>
   </section>
   <footer>
-    <p><small>Hosted on GitHub Pages | (original) theme by <a href="https://github.com/orderedlist">orderedlist</a></small><br />
-      <small>Porquê o github? Para explorar. Remain restless!</small></p>
+    <p><small>Hosted on GitHub Pages | (original) theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
   </footer>
 </div>
 <script src="javascripts/scale.fix.js"></script> 
