--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <ul class="dashboard-tabs">
       <li><a href="#tab2013">TAB</a></li>
       <li><a href="#cmi2013">CMI</a></li>
+      <li><a href="#ic2013">IC</a></li>
       <li><a href="#dpm2013">DPM <span class="counter">!</span></a></li>
       <li><a href="#arquivo" class="a selected">Arquivo</a></li>
     </ul>
@@ -176,6 +177,30 @@
         </table>
       </div>
     </div>
+
+<h2><a name="ic2013" class="anchor" href="#ic2013"><span class="octicon octicon-link"></span></a> Introdução à Computação</h2>
+    <div class="boxed-group">
+      <div class="boxed-group-inner seamless">
+        <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
+          <caption>
+          Resumo
+          </caption>
+          <tr>
+            <th scope="row">Objectivos</th>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <th scope="row">Tópicos</th>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <th scope="row">Bibliografia</th>
+            <td>&nbsp;</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    
     <h2> <a name="dpm2013" class="anchor" href="#dpm2013"><span class="octicon octicon-link"></span></a> Design de Produtos Multimédia</h2>
     <div class="flash-messages">
       <div class="flash  flash-warn"> Por actualizar </div>
