--- a/index.html
+++ b/index.html
@@ -187,15 +187,26 @@
           </caption>
           <tr>
             <th scope="row">Objectivos</th>
-            <td>&nbsp;</td>
+            <td><p>O aluno deverá dominar o Flash enquanto plataforma multimédia / web e ferramenta de produção gráfica interactiva.</p></td>
           </tr>
           <tr>
             <th scope="row">Tópicos</th>
-            <td>&nbsp;</td>
+            <td><ul>
+              <li>Familiaridade com o interface do Flash e domínio das suas ferramentas;</li>
+              <li>Execução de projectos gráficos e produção de materiais visuais combinados (vectores, bitmaps, texto, vídeo, áudio);</li>
+              <li>Integração com outras ferramentas de produção gráfica;</li>
+              <li>Compreensão das potencialidades do Flash para web, vantagens e desvantagens;</li>
+            </ul>              </td>
           </tr>
           <tr>
             <th scope="row">Bibliografia</th>
-            <td>&nbsp;</td>
+            <td><ul>
+              <li>Apoios e referências diversas fornecidos em aula.</li>
+              <li>Perkins, Todd. Flash Professional CS5 Bible. Hoboken, NJ: Wiley Pub., 201<strong>0</strong></li>
+              <li>Help.adobe.com. 2013. Adobe Flash Professional * Best practices - Advertising with Flash. [online] Disponível em: http://help.adobe.com/en_US/flash/cs/using/WSd60f23110762d6b883b18f10cb1fe1af6-7b29a.html [acedido: 29 Sep 2013].</li>
+              <li>AdobeTV. 2013. CS5 Design Premium Feature Tour - Interaction Design 101: Create a simple banner ad with Flash Professional CS5 on Adobe TV. [online] Disponível em: http://tv.adobe.com/watch/cs5-design-premium-feature-tour/interaction-design-101-create-a-simple-banner-ad-with-flash-professional-cs5/ [acedido: 29 Sep 2013].</li>
+              <li>Help.adobe.com. 2013. Adobe Flash Professional * Best practices - Optimizing FLA files for SWF output. [online] Disponível em: http://help.adobe.com/en_US/flash/cs/using/WSd60f23110762d6b883b18f10cb1fe1af6-7b23a.html#WSd60f23110762d6b883b18f10cb1fe1af6-7b1ba [acedido: 29 Sep 2013].</li>
+            </ul>            </td>
           </tr>
         </table>
       </div>
