--- a/index.html
+++ b/index.html
@@ -54,12 +54,16 @@
       <li>Mullet, Kevin, and Darrell Sano. Designing Visual Interfaces: Communication Oriented Techniques. Englewood Cliffs, NJ: SunSoft, 1995. Print.</li>
       <li>Dix, Alan. Human-computer Interaction. London: Prentice Hall Europe, 1998. Print. </li>
     </ul>
-    <h4>Animação (Flash)</h4>
+    <h4>Flash</h4>
+    <ul>
+      <li><a href="http://www.adobe.com/devnet/flash.html" target="_blank">Adobe Flash Developer Center</a></li>
+    </ul>
+    <h4> Flash (animação)</h4>
     <ul>
       <li><a href="http://www.coldhardflash.com" target="_blank">Cold Hard Flash</a>: actualizado constantemente,  as mais recentes animações Flash e derivadas (cinema, televisão, web e jogos);</li>
        <li><a href="http://flash-powertools.com/" target="_blank">Electric Dog Animation Power Tools</a>: plugins de suporte à animação em Flash;</li>
     </ul>
-    <h4>Jogos (Flash)</h4>
+    <h4>Flash (jogos)</h4>
     <ul>
       <li><a href="http://www.adobe.com/devnet/games.html" target="_blank">Adobe Game Development</a></li>
       <li><a href="http://gaming.adobe.com/" target="_blank">Adobe Gaming</a> </li>
@@ -202,10 +206,10 @@
             <th scope="row">Bibliografia</th>
             <td><ul>
               <li>Apoios e referências diversas fornecidos em aula.</li>
-              <li>Perkins, Todd. Flash Professional CS5 Bible. Hoboken, NJ: Wiley Pub., 201<strong>0</strong></li>
-              <li>Help.adobe.com. 2013. Adobe Flash Professional * Best practices - Advertising with Flash. [online] Disponível em: http://help.adobe.com/en_US/flash/cs/using/WSd60f23110762d6b883b18f10cb1fe1af6-7b29a.html [acedido: 29 Sep 2013].</li>
+              <li>Perkins, Todd. Flash Professional CS5 Bible. Hoboken, NJ: Wiley Pub., 2010</li>
+              <li>Help.adobe.com. 2013. Adobe Flash Professional * Best practices - Advertising with Flash. [online] Disponível em: http://help.adobe.com/en_US/flash/cs/using/ WSd60f23110762d6b883b18f10cb1fe1af6-7b29a.html [acedido: 29 Sep 2013].</li>
               <li>AdobeTV. 2013. CS5 Design Premium Feature Tour - Interaction Design 101: Create a simple banner ad with Flash Professional CS5 on Adobe TV. [online] Disponível em: http://tv.adobe.com/watch/cs5-design-premium-feature-tour/interaction-design-101-create-a-simple-banner-ad-with-flash-professional-cs5/ [acedido: 29 Sep 2013].</li>
-              <li>Help.adobe.com. 2013. Adobe Flash Professional * Best practices - Optimizing FLA files for SWF output. [online] Disponível em: http://help.adobe.com/en_US/flash/cs/using/WSd60f23110762d6b883b18f10cb1fe1af6-7b23a.html#WSd60f23110762d6b883b18f10cb1fe1af6-7b1ba [acedido: 29 Sep 2013].</li>
+              <li>Help.adobe.com. 2013. Adobe Flash Professional * Best practices - Optimizing FLA files for SWF output. [online] Disponível em: http://help.adobe.com/en_US/flash/cs/using/ WSd60f23110762d6b883b18f10cb1fe1af6-7b23a.html# WSd60f23110762d6b883b18f10cb1fe1af6-7b1ba [acedido: 29 Sep 2013].</li>
             </ul>            </td>
           </tr>
         </table>
